# embedded-liteRT

./: .gitignore  CMakeLists.txt  README.md  detection.cpp  detection.h  device.cpp  device.h  main.cpp  model.cpp  model.h
edu/: GAN.txt  MachineLearning.txt  NetworkArchitecture.txt  NeuralNetworks.txt  PreProcessing.txt
